force-app/main/default/objects/Utterance_Log__c/Utterance_Log__c.object-meta.xml
<CustomObject>
    <label>Utterance Log</label>
    <nameField>
        <displayFormat>UL-{0000}</displayFormat>
        <label>Utterance Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Utterance Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>