force-app/main/default/objects/Utterance_Log__c/fields/CurrentUtterance__c.field-meta.xml
<CustomField>
    <fullName>CurrentUtterance__c</fullName>
    <label>CurrentUtterance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>