force-app/main/default/objects/Utterance_Log__c/fields/Live_Chat_Transcript__c.field-meta.xml
<CustomField>
    <fullName>Live_Chat_Transcript__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Live Chat Transcript</label>
    <referenceTo>LiveChatTranscript</referenceTo>
    <relationshipLabel>Utterance Logs</relationshipLabel>
    <relationshipName>Utterance_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>