force-app/main/default/objects/Utterance_Log__c/fields/Messaging_Session__c.field-meta.xml
<CustomField>
    <fullName>Messaging_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Messaging Session</label>
    <referenceTo>MessagingSession</referenceTo>
    <relationshipLabel>Utterance Logs</relationshipLabel>
    <relationshipName>Utterance_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>